--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation files('..\\libs\\lib\\libsvm.jar')
     implementation files('..\\libs\\lib\\weka.jar')
     implementation 'androidx.compose.ui:ui-graphics:1.0.0-beta04'
+    implementation 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+    implementation 'com.github.glassLake:DialogUtils:1.0.2'
+
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
