--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,20 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
-
+        classpath 'com.android.tools.build:gradle:7.0.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
+//allprojects {
+//    repositories {
+//        //...omitted for brevity
+//        maven { url 'https://jitpack.io' }
+//    }
+//}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
